--- a/.github/workflows/workflow.yml
+++ b/.github/workflows/workflow.yml
@@ -1,34 +1,45 @@
-name: Publish Python 🐍 distribution 📦 to PyPI
+name: Publish Python Package to PyPi
 
 on:
   push:
-    tags:
-      - 'v*'  # Only trigger on version tags like v1.0.0
+    branches:
+      - main
 
 jobs:
-  build-and-publish:
-    name: Build and publish to PyPI
+  publish:
     runs-on: ubuntu-latest
-    permissions:
-      id-token: write
-      contents: read
+
+    # Specify the environment
+    environment:
+      name: pypi
+
     steps:
-      - uses: actions/checkout@v4
+      # Checkout the code
+      - name: Checkout code
+        uses: actions/checkout@v3
 
+      # Set up Python
       - name: Set up Python
-        uses: actions/setup-python@v5
+        uses: actions/setup-python@v4
         with:
-          python-version: '3.11'
+          python-version: '3.12'
 
-      - name: Install build tools
+      # Install dependencies
+      - name: Install dependencies
         run: |
-          python -m pip install --upgrade build
+          python -m pip install --upgrade pip
+          pip install poetry
 
-      - name: Build the package
+      # Build the package
+      - name: Build package
         run: |
-          python -m build
+          poetry install --with dev
+          poetry build
 
+      # Publish to PyPI
       - name: Publish to PyPI
-        uses: pypa/gh-action-pypi-publish@release/v1
-        with:
-          password: ${{ secrets.PYPI_API_TOKEN }}
+        env:
+          PYPI_USERNAME: ${{ secrets.PYPI_USER_NAME }}
+          PYPI_PASSWORD: ${{ secrets.PYPI_API_TOKEN }}
+        run: |
+          poetry publish --username $PYPI_USERNAME --password $PYPI_PASSWORD
