--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,15 +1,16 @@
-[build-system]
-requires = ["setuptools>=61.0"]
-build-backend = "setuptools.build_meta"
-
-[project]
+[tool.poetry]
 name = "glider"
-version = "0.1.0"
+version = "0.1.1"
 description = "Glider CLI"
-authors = [{ name = "Your Name", email = "your@email.com" }]
+authors = ["glider@boltu.ai"]
+license = "Proprietary"
 readme = "README.md"
-license = { text = "MIT" }
-requires-python = ">=3.11"
 
-[project.scripts]
+[tool.poetry.scripts]
 glider = "glider.cli:configure"
+
+[tool.poetry.dependencies]
+python = "^3.11"
+
+[tool.poetry.group.dev.dependencies]
+pytest = "^8.3.4"
